--- a/src/components/layout/FooterLogos/FooterLogos.css
+++ b/src/components/layout/FooterLogos/FooterLogos.css
@@ -1,11 +1,10 @@
 .footer_logo_img {
-  width: 250px;
-  height: 50px;
-  margin-right: 10px;
-  padding-right: 10px;
+  vertical-align: top;
+  padding-top: 41px;
 }
 
 .istat-logo {
   width: 190px;
   height: 50px;
+  padding-left: 48px;
 }
