--- a/src/components/static-content/faq/FaqHeader/FaqHeader.css
+++ b/src/components/static-content/faq/FaqHeader/FaqHeader.css
@@ -1,8 +1,11 @@
 .faq-header {
-  max-width: 1184px;
   height: 500px;
-  margin: 56px 0 51px;
-  padding: 76px 350px 44px 123px;
+  margin-top: 0px;
+  margin-bottom: 56px;
+}
+
+.header {
+  padding-left: 123px;
 }
 
 .subtext {
