--- a/src/components/search/SearchResultItem/SearchResultItem.module.css
+++ b/src/components/search/SearchResultItem/SearchResultItem.module.css
@@ -11,7 +11,8 @@
 }
 
 .itemDescription {
-  font-size: 16px !important;
+  font-family: "Titillium Web", Geneva, Tahoma, sans-serif !important;
+  font-size: 18px !important;
 }
 
 .itemInfo {
