#80 - making asset type chip blue

--- a/src/components/search/AssetTypeChip/AssetTypeChip.module.css
+++ b/src/components/search/AssetTypeChip/AssetTypeChip.module.css
@@ -1,6 +1,6 @@
-.container {
-  background-color: #373434 !important;
-}
+/*.container {*/
+/*  background-color: #373434 !important;*/
+/*}*/
 
 .label {
   text-transform: none;
