--- a/src/components/semantic-assets/AssetDetails/summary/AssetDetailsButtons.module.css
+++ b/src/components/semantic-assets/AssetDetails/summary/AssetDetailsButtons.module.css
@@ -1,8 +1,5 @@
 .detailsButton {
-  margin-top: 30px;
-  margin-bottom: 30px;
-  margin-left: 15px;
-  margin-right: 5px;
+  margin: 30px 5px 30px 15px;
   width: 186px;
   height: 48px;
 }
