#92 - changing the default font

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,7 +1,7 @@
 @import "bootstrap-italia.min.css";
 
 body {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+  font-family: -apple-system, "Titillium_Web", "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
