111 - Show error message when search fails

--- a/src/components/search/SearchResultAlert/SearchResultAlert.module.css
+++ b/src/components/search/SearchResultAlert/SearchResultAlert.module.css
@@ -15,5 +15,5 @@
   max-height: 356px;
   min-width: 56px;
   min-height: 36px;
-  background-image: url("./noresults.svg");
+  background-image: url("./alert.svg");
 }
