# Make the home page responsive to smaller device

--- a/src/components/common/IntroSection/IntroSection.module.css
+++ b/src/components/common/IntroSection/IntroSection.module.css
@@ -5,10 +5,12 @@ div:empty {
 a:empty {
   display: none;
 }
-
+@media (max-width: 768px) {
+  [class*="col-"] {
+      margin-bottom: 15px;
+  }
+}
 .title {
-  width: 494px;
-  height: 24px;
   margin-bottom: 0px;
   font-size: 16px;
   letter-spacing: 1.1px;
@@ -16,8 +18,6 @@ a:empty {
 }
 
 .subtitle {
-  width: 500px;
-  height: 96px;
   font-size: 40px;
   line-height: 1.2;
   letter-spacing: -1px;
@@ -26,8 +26,6 @@ a:empty {
 }
 
 .description {
-  width: 578px;
-  height: 81px;
   font-size: 18px;
   font-weight: normal;
   font-stretch: normal;
