Remove override style of container class to center align the webpage

--- a/src/components/layout/HeaderMainMenu/HeaderMainMenu.css
+++ b/src/components/layout/HeaderMainMenu/HeaderMainMenu.css
@@ -3,17 +3,13 @@
   font-family: "Titillium Web Semi Bold";
 }
 
-.container {
-  margin: 0;
-}
-
-.container_left {
+.mainmenu_left {
   /* Sticks to the left */
   margin-right: auto;
   display: flex;
 }
 
-.container_right {
+.mainmenu_right {
   /* Sticks to the right */
   margin-left: auto;
   display: flex;
