--- a/src/App.css
+++ b/src/App.css
@@ -37,3 +37,12 @@
     transform: rotate(360deg);
   }
 }
+.opblock-summary-path:hover{
+  color: #3b4151 !important;
+}
+.swagger-ui .opblock-tag:hover{
+  color: #3b4151 !important;
+}
+a.nostyle:hover{
+  color : #3b4151 !important;
+}
