Aggiunta pagine di errore e fix alla UI (#236)
* il progetto e domande frequenti cambio testi

* add general page error 500

* fix swagger-ui mouse hover

* update error page, not found page and no results component

* delete disclaimer

* remove place holder imge

* clear API_URL

* fix unit test and dependency tes

Co-authored-by: Domenico Rea <domenico.rea@innovaway.it>

--- a/src/App.css
+++ b/src/App.css
@@ -37,3 +37,18 @@
     transform: rotate(360deg);
   }
 }
+.opblock-summary-path:hover{
+  color: #3b4151 !important;
+}
+.swagger-ui .opblock-tag:hover{
+  color: #3b4151 !important;
+}
+a.nostyle:hover{
+  color : #3b4151 !important;
+}
+.text-primary-title{
+  color:#06c
+}
+a.link:hover{
+  color:#004080 !important;
+}
