fix bredcrumbs, add herospace

--- a/src/components/layout/FooterLinks/FooterLinks.module.css
+++ b/src/components/layout/FooterLinks/FooterLinks.module.css
@@ -13,3 +13,11 @@
 a:hover {
   color: white !important;
 }
+.bottomFooter {
+  color: white !important;
+  font-size: 15px;
+  padding-right: 15px;
+}
+.bottomFooter:hover {
+  color: #0bd9d2 !important;
+}
