--- a/src/components/semantic-assets/AssetDetails/AssetDetails.module.css
+++ b/src/components/semantic-assets/AssetDetails/AssetDetails.module.css
@@ -8,3 +8,9 @@
   font-size: 16px;
   letter-spacing: 1px;
 }
+.metadataHeader h2 {
+  font-weight: bold;
+  color: #1c2024;
+  font-size: 16px;
+  letter-spacing: 1px;
+}
