Rework Margin, accesibility and first version of alert message (#307)
* Rollback to add6efc31880b8.

* Bump loader-utils to 1.4.2.

* margini, gerachia h e prima versione alert manutenzione

* margini, gerachia h e prima versione alert manutenzione v2

Co-authored-by: Roberto Polli <robipolli@gmail.com>
Co-authored-by: unknown <domenico.rea@innovaway.it>

--- a/src/App.css
+++ b/src/App.css
@@ -73,7 +73,6 @@ div.progress-bar:empty {
 .text-primary-title.active {
   text-decoration: underline;
 }
-
 .introSectionBread {
   background: #f2f7fc;
 }
@@ -95,4 +94,27 @@ div.progress-bar:empty {
 a.btn.endSection {
   background-color: white;
   color: #0066cc;
+}
+.container-fluid.schemaPadding {
+  padding-left: 8.7rem !important;
+  padding-right: 8.7rem !important;
+}
+
+@media (max-width: 960px) {
+  .container-fluid.schemaPadding {
+    padding-left: 3rem !important;
+    padding-right: 3rem !important;
+  }
+}
+@media (max-width: 768px) {
+  .container-fluid.schemaPadding {
+    padding-left: 0.7rem !important;
+    padding-right: 0.7rem !important;
+  }
+}
+@media (max-width: 540px) {
+  .container-fluid.schemaPadding {
+    padding-left: auto !important;
+    padding-right: auto !important;
+  }
 }
