--- a/src/components/layout/HeaderMainTitle/HeaderMainTitle.css
+++ b/src/components/layout/HeaderMainTitle/HeaderMainTitle.css
@@ -1,17 +1,17 @@
 .main-heading {
-    font-size: 1.778em;
-    margin-top: 0;
-    margin-bottom: 0;
-    font-weight: 600;
-    letter-spacing: unset;
-    line-height: 1.1;
+  font-size: 32px;
+  margin-top: 0;
+  margin-bottom: 0;
+  font-weight: 600;
+  letter-spacing: unset;
+  line-height: 1.1;
 }
 
 .sub-heading {
-    font-size: 0.889em !important;
-    font-weight: 400 !important;
-    margin-top: 0 !important;
-    margin-bottom: 0 !important;
-    letter-spacing: normal;
-    line-height: 1.35;
+  font-size: 18px !important;
+  font-weight: 400 !important;
+  margin-top: 0 !important;
+  margin-bottom: 0 !important;
+  letter-spacing: normal;
+  line-height: 1.35;
 }
