--- a/src/components/layout/HeaderSlim/HeaderSlim.css
+++ b/src/components/layout/HeaderSlim/HeaderSlim.css
@@ -1,4 +1,6 @@
 .it-header-slim-wrapper-content .navbar-brand {
+  width: 100%;
   font-size: 14px !important;
   font-family: "Titillium Web Semi Bold";
 }
+
