--- a/src/components/explore/ExploreByType/ExploreByType.module.css
+++ b/src/components/explore/ExploreByType/ExploreByType.module.css
@@ -4,3 +4,10 @@
   height: 121px;
   font-size: 22px !important;
 }
+
+.fontExploreByTypeColor {
+  color: #0066cc !important;
+}
+.footerBorderExploreByType {
+  border-top: none !important;
+}
