--- a/src/components/semantic-assets/AssetDetails/AssetDetails.module.css
+++ b/src/components/semantic-assets/AssetDetails/AssetDetails.module.css
@@ -1,7 +1,9 @@
 .detailsContainer {
   background: linear-gradient(to bottom, #f0f6fc 437px, white 0);
 }
-
+.bkg {
+  background-color: #f0f6fc;
+}
 .metadataHeader {
   font-weight: bold;
   color: #1c2024;
