card category and issue n° 296, 315, 323, 327 (#368)
* explore_page category change card, fix summary in schemametadata

* fix wdio

* fix wdio

* start

* merged with category-card

* fix bugs og github, add card for search typology change favicon

* issue n 296 315 323 327 and change category card

* publiccode.yml fix

---------

Co-authored-by: Antonio <antoniobencimail@gmail.com>

--- a/src/components/explore/ExploreByType/ExploreByType.module.css
+++ b/src/components/explore/ExploreByType/ExploreByType.module.css
@@ -4,3 +4,9 @@
   height: 121px;
   font-size: 22px !important;
 }
+.fontExploreByTypeColor {
+  color: #0066cc !important;
+}
+.footerBorderExploreByType {
+  border-top: none !important;
+}
