--- a/src/components/layout/HeaderMainTitle/HeaderMainTitle.css
+++ b/src/components/layout/HeaderMainTitle/HeaderMainTitle.css
@@ -15,6 +15,10 @@
   line-height: 1.35;
 }
 
+.pagetitle{
+  margin-left: -0.625rem;
+}
+
 @media (max-width: 500px) {
   [class*="col-2"] {
     width: 70px;
