Porting React - Bootstrap Italia - Accessibilità (#431)
* Bootstrap V1

* Bootstrap Italia V2

* Bugfix BIT V2

* Note legali BT2

* Fixed footer

* Bootstrap fixes

* Changed yarn.lock and legalNotices

* Other change on yarn lock file

* first commit porting bootstrap

* Fixed test file

* Burger menu and other mobile fixes

* Style fixes and accessibility updates

---------

Co-authored-by: BelishtaArjol <belishtaarjol@gmail.com>

--- a/src/components/layout/HeaderMainTitle/HeaderMainTitle.css
+++ b/src/components/layout/HeaderMainTitle/HeaderMainTitle.css
@@ -14,3 +14,13 @@
   letter-spacing: normal;
   line-height: 1.35;
 }
+
+.pagetitle{
+  margin-left: -0.625rem;
+}
+
+@media (max-width: 500px) {
+  [class*="col-2"] {
+    width: 70px;
+  }
+}
