--- a/src/components/semantic-assets/AssetDetails/metadata/MetadataRow.module.css
+++ b/src/components/semantic-assets/AssetDetails/metadata/MetadataRow.module.css
@@ -16,3 +16,13 @@
 .assetLink:hover {
   color: #084d91 !important;
 }
+
+@media screen and (max-width: 992px) {
+  .column {
+    flex-direction: column ;
+  }
+
+  .propertyName {
+    text-wrap: nowrap;
+  }
+}
