--- a/src/components/semantic-assets/AssetDetails/summary/AssetDetailsButtons.module.css
+++ b/src/components/semantic-assets/AssetDetails/summary/AssetDetailsButtons.module.css
@@ -3,3 +3,12 @@
   width: 186px;
   height: 48px;
 }
+
+
+@media screen and (max-width: 992px) {
+  .cntbuttons {
+    margin-left: 2.5em;
+    flex-direction: column;
+    justify-content: flex-end !important;
+  }
+}
