--- a/src/components/semantic-assets/AssetDetails/AssetDetails.module.css
+++ b/src/components/semantic-assets/AssetDetails/AssetDetails.module.css
@@ -16,3 +16,15 @@
   font-size: 16px;
   letter-spacing: 1px;
 }
+
+.padding{
+  padding-left: 16px !important;
+}
+
+
+@media  screen and (max-width: 992px) {
+    .ps-5 {
+      padding-left: 0 !important;
+      padding-right: 0 !important;
+    }
+  }
