--- a/src/components/semantic-assets/AssetDetails/summary/AssetDetailsSummary.module.css
+++ b/src/components/semantic-assets/AssetDetails/summary/AssetDetailsSummary.module.css
@@ -16,3 +16,20 @@
   font-size: 18px;
   line-height: 21px;
 }
+
+
+@media screen and (max-width: 992px) {
+  .card {
+    height: 170px;
+    overflow: auto;
+    width: 15em;
+  }
+
+  .text {
+    font-size: 15px;
+  }
+
+  h1 {
+    margin-top: 3em !important;
+  }
+}
