--- a/src/components/common/IntroSection/IntroSection.module.css
+++ b/src/components/common/IntroSection/IntroSection.module.css
@@ -32,6 +32,13 @@ a:empty {
   padding-top: 24px;
 }
 
+
+
+.btnSecondary {
+  width: 10.8em;
+  margin-left: 1%;
+}
+
 .btnSecondary:hover {
   color: #084d91 !important;
 }
