fixed issues n.: .136.472.474.Footer e Chips

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,7 +1,7 @@
 @import "bootstrap-italia.min.css";
 
 body {
-  font-family: -apple-system, "Titillium Web", "Segoe UI", "Roboto", "Oxygen",
+  font-family: "Titillium Web", "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
