--- a/src/components/semantic-assets/AssetDetails/AssetDetails.module.css
+++ b/src/components/semantic-assets/AssetDetails/AssetDetails.module.css
@@ -27,4 +27,12 @@
       padding-left: 0 !important;
       padding-right: 0 !important;
     }
+
+ 
+  }
+
+  @media  screen and (max-width: 520px) {
+    .detailsContainer {
+      background: linear-gradient(to bottom, #f0f6fc 600px, white 0);
+    }
   }
