feat(search): add order filter and change background color

--- a/src/App.css
+++ b/src/App.css
@@ -74,7 +74,7 @@ div.progress-bar:empty {
 .text-primary-title.active {
   text-decoration: underline;
 }
-.introSectionBread {
+.secondaryBkg {
   background: #f2f7fc;
 }
 .introSectionBreadWhite {
