feat(search): add new search page for extraction

--- a/src/components/search/SearchResultItem/SearchResultItem.module.css
+++ b/src/components/search/SearchResultItem/SearchResultItem.module.css
@@ -2,7 +2,7 @@
   font-size: 14px;
   color: #435a70;
   margin-top: 0.8em;
-  margin-bottom: 1em;
+  margin-bottom: 24px;
 }
 
 .itemTitle {
@@ -15,24 +15,32 @@
   font-size: 18px !important;
 }
 
-.copyurl:hover, .copyurl:hover * {
+.copyurl:hover,
+.copyurl:hover * {
   color: #06c;
   cursor: pointer;
   text-decoration: underline !important;
 }
 
-
 .itemInfo {
   font-size: 15px;
   font-weight: normal;
-  line-height: 1.87;
+  line-height: 20px;
   margin-top: 3em;
 }
 
 .itemInfoLabel {
-  color: #19191a;
+  font-weight: 600;
+  line-height: 16px;
+  color: #2f475e;
 }
 
 .smallerFooter::after {
   margin-top: 1px !important;
+}
+
+.captionCategories {
+  font-weight: 600;
+  line-height: 16px;
+  color: #768594;
 }
