--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,13 +1,13 @@
 @import "bootstrap-italia.min.css";
 
 body {
-  font-family: "Titillium Web", "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+  font-family: "Titillium Web", "Segoe UI", "Roboto", "Oxygen", "Ubuntu",
+    "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   margin: 0;
   overflow-x: hidden;
+  font-weight: 400;
 }
 
 code {
