--- a/src/components/search/SearchResultItem/SearchResultItem.module.css
+++ b/src/components/search/SearchResultItem/SearchResultItem.module.css
@@ -10,6 +10,17 @@
   font-weight: bold;
 }
 
+.itemTitle:hover {
+  text-decoration: underline;
+  text-decoration-color: #06c;
+  text-underline-offset: 7px;
+}
+.assetIri:hover {
+  text-decoration: underline;
+  text-decoration-color: #06c;
+  text-underline-offset: 2px;
+}
+
 .itemDescription {
   font-family: "Titillium Web", Geneva, Tahoma, sans-serif !important;
   font-size: 18px !important;
